Fixed text overflow

--- a/frontend/src/assets/styles/cmps/_TaskPreview.scss
+++ b/frontend/src/assets/styles/cmps/_TaskPreview.scss
@@ -31,6 +31,7 @@
         background-color: #fff;
 
         .task-title-sub {
+            max-width: 270px;
             width: 100%;
             padding-inline-end: 16px;
         }
@@ -42,8 +43,11 @@
             cursor: auto;
             height: 20px;
             padding: 12px 5px;
-            width: 30px;
-            min-width: fit-content;
+            width: auto;
+            overflow-y: hidden;
+            overflow-x: hidden;
+            white-space: nowrap;
+            // min-width: fit-content;
             transition: width .2s ease;
             border-radius: 4px;
 
@@ -55,13 +59,13 @@
     }
 
     .open-con {
-        opacity: 0;
+        display: none;
         min-width: 67px;
     }
 
     &:hover {
         .open-con {
-            opacity: 1;
+            display: flex;
         }
     }
 
